ex-3.4/manifests/ping-pong-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: hovhanneshovakimyan/ping-pong:3.4-multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
  namespace: devops
spec:
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
